2002-05-16  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ProcessAssignmentExpression): Fix coredump in
	Jacks test 15.26.2-left-shift-12 and others.
	* src/symbol.h (IsLocal): Workaround coredump in jacks test
	8.1.2-static-15.

2002-05-16  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitStatement): Fix bug 2871, where infinite
	loops were not properly detected.

2002-05-16  Eric Blake  <ebb9@email.byu.edu>

	* src/dump.cpp (token_type): One more update.

2002-05-16  Eric Blake  <ebb9@email.byu.edu>

	* src/error.cpp (PrintINHERITANCE_AND_LEXICAL_SCOPING_CONFLICT_WITH_LOCAL):
	* src/decl.cpp (FindType): Improve error message.

2002-05-15  Andrew Pimlott  <jikes-dev@andrew.pimlott.net>

	* src/bytecode.cpp (EmitConditionalExpression): Fix bug in
	the patch on 11 May.

2002-05-15  Eric Blake  <ebb9@email.byu.edu>

	* src/dump.cpp (token_type): Missed a case in previous commit.

2002-05-15  Eric Blake  <ebb9@email.byu.edu>

	Updated version of patch 40.
	* src/bytecode.cpp:
	* src/bytecode.h:
	* src/definite.cpp:
	* src/expr.cpp: Add support for parenthesized variables - bug 105.
	* src/error.cpp:
	* src/error.h: Add new errors UNNECESSARY_PARENTHESIS,
	NOT_A_VARIABLE.
	* src/java.g: Update grammar to allow parenthesized variables in
	assignment expressions.
	* src/javaact.cpp:
	* src/javaact.h:
	* src/javadcl.h:
	* src/javadef.h:
	* src/javasym.h: Regenerate.

2002-05-15  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitStatement):  Fix definite assignment
	analysis of for loops - bug 2780.
	* src/definite.cpp (DefiniteForStatement): Fix abrupt completion
	bug in loops.

2002-05-15  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (CompileClass): Fix bug 2256 for default
	private constructors, jacks test 8.8.7-runtime-default-3.
	(CompileClass): 
	* src/expr.cpp (UpdateLocalConstructors): Fix bug 206, when
	accessing private superconstructor from local class.

2002-05-15  David Lum  <david.lum@level8.com>
